--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-<div class="signupfrm">
-        <form action="" class="form">
-            <h1 class="title">Sign up</h1>
-   
-   
+    <h1>
+		Password Generator
+	</h1>
 
+   <div class="results">
+    <button onclick="gfg_Run()"><br>
+        Generate
+    </button>
+        <p id="geeks"></p>
+    </div>
+
+
+   <h3>
+        Click on the button to
+        generate random password.
+    </h3>
 
 <script src="index.js"></script>
 </body>
