updated button and text

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
    <div class="results">
     <button onclick="gfg_Run()"><br>
-        Generate
+       <h4> Generate</h4>
     </button>
         <p id="geeks"></p>
     </div>
 
 
    <h3>
-        Click on the button to
-        generate random password.
+        Click to
+        generate password.
     </h3>
 
 <script src="index.js"></script>
