--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button onclick="gfg_Run()"><br>
        <h4> Generate</h4>
     </button>
-        <p id="geeks"></p>
+    <p id="code"></p>
     </div>
 
 
